Employ Java autoboxing for primitives